2009-01-09  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Use N_() instead of _() for command-line options.
	Fixes bug #567197.

2009-01-09  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	reviewed by: Gerd Kohlberger

	* data/pointer-capture-applet.schemas.in: More improvements to gconf
	key descriptions. Closes bug #552222.

2009-01-09  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.schemas.in: Improve key
	descriptions. Bug #552222.

2009-01-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/*.glade: Remove old .glade files from tree.

2009-01-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.ui:
	* data/mousetweaks.ui:
	
	Use standard icon name. Bug #545059

2009-01-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c:
	* data/dwell-click-applet.ui:
	
	Change the enable button to use a stock icon instead of the
	On/Off label.
	
	Use standard icon name. Bug #545059

2009-01-05 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.4

2009-01-05 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.25.4 release.

2009-01-05 Francesco Fumanti <frfumanti@svn.gnome.org>

	* data/pointer-capture-applet.schemas.in
	
	Improve short and long descriptions

2008-12-15 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Skipping the 2.25.3 release. Version bump to 2.25.4

2008-12-01 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.3

2008-12-01 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.25.2 release.

2008-11-13  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: (global_motion_event): Make sure drag-clicks also
	work if both Dwell Click and Simulated Secondary Click are enabled.

2008-11-13  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: (mt_main_generate_button_event): Fix typo and