@@ -1,3 +1,10 @@
+2009-01-09  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	reviewed by: Gerd Kohlberger.
+
+	* data/pointer-capture-applet.schemas.in: Fixed a typo in my previous
+	commit.
+
 2009-01-09  Gerd Kohlberger  <gerdk@svn.gnome.org>
 
 	* src/mt-main.c: Use N_() instead of _() for command-line options.
